# stargazing-place-finder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PYPI_PUBLISH_GUIDE.md  README.md  README_EN.md  publish_to_pypi.py  pyproject.toml  stargazing_analyzer_example.py  start.sh  test_road_connectivity.py  test_stargazing_analyzer.py
.github/workflows/: auto-tag.yml  ci.yml  copilot-review.yml  release.yml  test-secret.yml
config/: stargazing_config.toml
docs/: coordinate_analysis_report.md  frontend_refactoring_plan.md  frontend_typescript_migration_plan.md  light_pollution_analyzer_guide.md  light_pollution_analyzer_system_design.md  light_pollution_integration_guide.md  mountain_peak_finder_guide.md  mountain_peak_finder_system_design.md  multi_repo_management.md  performance_optimization_plan.md  project_review_findings_2026-06-17.md  road_connectivity_guide.md  road_connectivity_system_design.md  stargazing_analyzer_guide.md  stargazing_location_analyzer_system_design.md  telescope_target_matching_design.md  unified_location_guide.md
docs/sphinx/source/: conf.py  index.rst
examples/: analyze_area_demo.py  batch_elevation_query_demo.py  batch_elevation_usage_example.py  cache_coordinate_demo.py  cache_demo.py  kml_parser_example.py  light_pollution_demo.py  light_pollution_example.py  location_example.py  map_example.py  observatory_finder_demo.py  performance_test.py  python_public_api_demo.py  query_elevation_demo.py  road_connectivity_example.py  robust_api_demo.py  simple_batch_demo.py  stargazing_analyzer_example.py  test_coordinate_analysis_fix.py  test_error_handling.py  test_overpass_retry.py  test_unified_dataclasses.py  unified_location_demo.py  viewpoint_finder_demo.py  visualization_example.py
src/: README.md  __init__.py  cache_config.py  conftest.py  example_usage.py  kml_parser.py  light_pollution_analyzer.py  light_pollution_api.py  light_pollution_example.py  light_pollution_map.py  light_pollution_visualizer.py  location_example.py  location_finder.py  map_example.py  mountain_peak_example.py  mountain_peak_finder.py  performance_test.py  road_connectivity_checker.py  road_connectivity_example.py  simple_road_checker.py  stargazing_analyzer_example.py  stargazing_location_analyzer.py  stargazing_place_finder.py  styled_map_generator.py  visualization_example.py
src/cache/: __init__.py  cache_config.py
src/cache/test/: test_cache_functionality.py  test_cache_integration.py
src/config/: __init__.py  stargazing_config.py
src/config/test/: test_config.py
src/example/: cache_example.py  light_pollution_example.py  location_example.py  map_example.py  mountain_peak_example.py  road_connectivity_example.py  stargazing_analyzer_example.py  stargazing_analyzer_example_old.py  visualization_example.py
src/gis_service/: __init__.py  caching.py  config.py  parsers.py  query_service.py
src/gis_service/backends/: __init__.py  elevation_backend.py  overpass_backend.py  postgis_backend.py
src/gis_service/test/: test_config.py  test_overpass_backend.py  test_query_service.py
src/light_pollution/: __init__.py  light_pollution_analyzer.py  light_pollution_api.py  light_pollution_map.py  light_pollution_visualizer.py  public_api.py
src/light_pollution/resources/: __init__.py  viirs_china_2025.tif
src/light_pollution/test/: __init__.py  test_light_pollution_analyzer.py  test_light_pollution_sorting.py  test_lp_analyzer_class.py  test_public_api.py
src/location_finder/: __init__.py  location_finder.py
src/location_finder/test/: __init__.py  test_observatory_finder.py  test_viewpoint_finder.py
src/models/: __init__.py  elevation.py  exceptions.py  geo.py  light_pollution.py  location.py  road.py  stargazing.py  town.py
src/mountain_peak/: __init__.py
src/mountain_peak/test/: __init__.py  test_mountain_peak_finder.py
src/road_connectivity/: __init__.py  geo_fence.py  road_connectivity_checker.py  simple_road_checker.py
src/road_connectivity/test/: __init__.py  test_road_connectivity.py  test_road_connectivity_parallel.py
src/server/: __init__.py  main.py  tile_renderer.py
src/server/routes/: __init__.py  health.py  pollution.py  stargazing.py  telescope.py  tiles.py  weather_tiles.py
src/source/: README.md  __init__.py  index-vite.html  index.html  package-lock.json  package.json  playwright.config.ts  template.html  tsconfig.json  vite.config.ts  vitest.config.ts
src/stargazing_analyzer/: __init__.py  cli.py  elevation_batch_query.py  public_api.py  stargazing_location_analyzer.py  stargazing_place_finder.py
src/stargazingplacefinder/: __init__.py
src/test/: run_independent_tests.py  run_src_tests.py  test_cache_functionality.py  test_cache_integration.py  test_light_pollution_sorting.py  test_mountain_peak_finder.py  test_observatory_finder.py  test_road_connectivity.py  test_stargazing_analyzer.py  test_unified_dataclasses.py  test_updated_analyze_area.py  test_viewpoint_finder.py
src/utils/: kml_parser.py  styled_map_generator.py
styled_map_output/: README.md  index.html  light_pollution_data.json
(+87 files in other folders)
