[project]
name = "stargazing-place-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "folium>=0.20.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "scipy>=1.16.1",
    "osmnx>=1.9.4",
    "networkx>=3.4.2",
    "geopandas>=1.0.1",
    "scikit-learn>=1.7.1",
    "geopy>=2.4.1",
]
