[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stargazing-place-finder"
version = "0.7.2"
description = "Stargazing place finder: light pollution analysis and stargazing area analytics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "StarGazer1995", email = "zhao.gong@outlook.com"}
]
keywords = ["stargazing", "astronomy", "light-pollution", "geographic-analysis", "location-finder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.11"
dependencies = [
  "stargazing-core @ git+https://github.com/StarGazer1995/stargazing-core.git",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "folium>=0.14.0",
  "matplotlib>=3.5.0",
  "httpx>=0.27.0",
  "numpy>=1.21.0",
  "pillow>=9.0.0",
  "scipy>=1.7.0",
  "osmnx>=1.3.0",
  "networkx>=2.6.0",
  "geopy>=2.2.0",
  "psycopg2-binary>=2.9.0",
  "requests>=2.25.0",
  "rasterio>=1.4.3",
  "pydantic>=2.13.4",
  "scikit-learn>=1.3.0",
  "tomli>=1.1.0; python_version < '3.11'",
  "structlog>=25.5.0",
]

[project.scripts]
stargazing-finder = "stargazing_analyzer.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "requests-mock>=1.10.0",
  "responses>=0.23.0",
  "freezegun>=1.2.0",
  "build>=0.10.0",
  "twine>=4.0.0",
  "ruff>=0.9.0",
  "sphinx>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"light_pollution" = ["resources/*.tif", "resources/*.py"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "freezegun>=1.5.5",
    "httpx2>=2.0.0",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "requests-mock>=1.12.1",
    "responses>=0.25.8",
    "ruff>=0.9.0",
    "setuptools>=80.9.0",
    "sphinx>=7.4.7",
    "wheel>=0.45.1",
]

[tool.ruff]
# Target Python version for lint/format
target-version = "py39"
line-length = 120

[tool.ruff.lint]
# E=pycodestyle, F=pyflakes(bug catcher), I=isort(import ordering)
select = ["E", "F", "I"]

# Allow long lines on specific patterns
ignore = ["E501"]

[tool.ruff.format]
# Use default ruff formatter settings
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
addopts = ["-v", "--tb=short"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.pytest-benchmark]
histogram = true
min_rounds = 5
max_time = 2.0
storage = "file"
save = "baseline"
compare = "baseline"

[tool.coverage.run]
source = ["src"]
omit = ["src/*/test/*", "src/test/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true

[tool.bandit]
# Bandit security scan configuration
exclude_dirs = ["test", "tests", ".venv", ".git", "build", "dist"]
skips = [
    "B101",  # Allow assert statements in tests
    "B104",  # Flask dev server binding to 0.0.0.0
    "B301",  # pickle.load for local disk cache (not untrusted input)
    "B403",  # pickle import for local disk cache
    "B311",  # random for retry backoff (not security-sensitive)
    "B324",  # MD5 for cache key generation (not security-sensitive)
    "B608",  # SQL f-string for highway filter (parameterized query values)
]
targets = ["src"]
